Add OIDC token to page source for debugging.

--- a/coinweb/templates/coinweb/index.html
+++ b/coinweb/templates/coinweb/index.html
@@ -3,6 +3,8 @@
 {% block title %}VivoCoin{% endblock %}
 {% block content %}
 
+<!-- User token: {{ oidc_token }} -->
+
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 	<h1 class="display-4">VivoCoin</h1>
 	<p class="lead">VivoKey demonstration website</p>
