Add userinfo endpoint

--- a/coinweb/templates/coinweb/base.html
+++ b/coinweb/templates/coinweb/base.html
@@ -35,20 +35,19 @@
 				<div class="col-12 col-md">
 				</div>
 				<div class="col-6 col-md">
-					<h5>API documentation</h5>
+					<!--h5>API documentation</h5>
 					<ul class="list-unstyled text-small">
 						<li><a class="text-muted" href="#">Apps</a></li>
 						<li><a class="text-muted" href="#">Online</a></li>
 						<li><a class="text-muted" href="#">More stuff</a></li>
-					</ul>
+					</ul-->
 				</div>
 				<div class="col-6 col-md">
-					<h5>About</h5>
+					<h5>Links</h5>
 					<ul class="list-unstyled text-small">
-						<li><a class="text-muted" href="#">Team</a></li>
-						<li><a class="text-muted" href="#">Locations</a></li>
-						<li><a class="text-muted" href="#">Privacy</a></li>
-						<li><a class="text-muted" href="#">Terms</a></li>
+						<li><a class="text-muted" href="https://vivokey.com/">VivoKey</a></li>
+						<li><a class="text-muted" href="https://api.vivokey.com/">API server</a></li>
+						<li><a class="text-muted" href="https://openid.net/connect/">OpenID Connect</a></li>
 					</ul>
 				</div>
 			</div>
