--- a/coinweb/templates/coinweb/index.html
+++ b/coinweb/templates/coinweb/index.html
@@ -3,11 +3,9 @@
 {% block title %}VivoCoin{% endblock %}
 {% block content %}
 
-<!-- User token: {{ oidc_token }} -->
-
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 	<h1 class="display-4">VivoCoin</h1>
-	<p class="lead">VivoKey demonstration website</p>
+	<p class="lead">A VivoKey OIDC demonstration</p>
 	{% if user.is_authenticated %}
 	{% if message %}
 	<p id="#message"><b>{{ message }}</b></p>
@@ -41,6 +39,11 @@
 		<button type='submit'>Pay $50</button>
 	</form>
 	{% endif %}
+
+	<form method="post" action="{% url 'userinfo' %}">
+		{% csrf_token %}
+		<button type="submit">OIDC user info"</button>
+	</form>
 
 	{% endif %}
 </div>
