--- a/coinweb/templates/coinweb/userinfo.html
+++ b/coinweb/templates/coinweb/userinfo.html
@@ -8,7 +8,7 @@
 
 	<p>OIDC access token: {{oidc_access_token}}</p>
 
-	<p>OIDC userinfo endpoint response: {{oidc_userinfo}}</p>
+	<p>OIDC userinfo endpoint response: <tt>{{oidc_userinfo}}</tt></p>
 
 	<p><a href="{% url 'index' %}">Go back</a></p>
 
